--- a/app/views/usuarios/index.html.erb
+++ b/app/views/usuarios/index.html.erb
@@ -4,6 +4,10 @@
 <% @usuarios.each do |usuario| %>
   <li>
     <%= link_to usuario.nome, usuario %>
+    <% if usuario_atual.administrador? %>
+      | <%= link_to "editar", edit_usuario_path(usuario) %>
+    <% end %>
+      | <%= link_to "remover", usuario, :method => :delete, :confirm => "Tem certeza que deseja remover este usuario?", :title => "Remover #{usuario.nome}" %>
   </li>
 <% end %>
 </ul>
